--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -2,19 +2,201 @@
   &-1
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 40%
-    right: 50%
+    top: 10%
+    right: 70%
   &-2
+    animation: float2 2.8s ease-in-out infinite alternate
+    position: absolute
+    top: 40%
+    right: 10%
+  &-3
     animation: float1 2.8s ease-in-out infinite alternate
     position: absolute
-    top: 51%
-    right: 30%
-
+    top: 60%
+    right: 60%
 
 @keyframes float1
   0%
     transform: translateY(20px)
-
   100%
     transform: translateY(0px)
 
+@keyframes float2
+  0%
+    transform: translateX(20px)
+  100%
+    transform: translateX(0px)
+
+.banner-principal__row .banner-principal__img
+  width: 460px
+  @media screen and ( max-width: $bp-max-lg )
+    width: 400px
+
+.banner-interno__fondo
+  background-image: url("../assets/curso/portada/img1.png") !important
+
+// Shadows
+.shadow
+  &-soft
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 10px 15px rgba(0, 0, 0, 0.05)
+  &-top-left-right
+    box-shadow: -4px 0 6px -2px rgba(0, 0, 0, 0.1), 4px 0 6px -2px rgba(0, 0, 0, 0.1)
+
+
+// Full Width Background
+.bg-full-width
+  //height: 100%
+  //width: calc(100% + var(--bs-gutter-x) * 2)
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: bottom
+  margin-inline: -3rem
+  @media screen and (max-width: $bp-max-sm)
+    padding-left: 1.5rem
+    padding-right: 1.5rem
+
+.brounded
+  border-radius: 15px
+
+.brounded-left-md
+  @media screen and (max-width: $bp-max-md)
+    border-top-left-radius: 15px
+    border-bottom-left-radius: 15px
+
+.brounded-right
+  border-top-right-radius: 15px
+  border-bottom-right-radius: 15px
+
+
+.bg-color
+  &-p
+    background-color: $color-primario
+  &-p20
+    background-color: #FED8CC
+  &-s10
+    background: linear-gradient(90deg, transparent 15%, #E5F0FC 15%);
+    @media screen and (max-width: $bp-max-md)
+      background-color: #E5F0FC
+  &-ac20
+    background-color: #F5EEC2
+  &-ac10
+    background-color: #FAF6E0
+  &-ac10-g
+    background: linear-gradient(90deg, transparent 15%, #FAF6E0 15%);
+    @media screen and (max-width: $bp-max-md)
+      background-color: #FAF6E0
+      
+  &-white
+    background-color: white
+
+.py-big
+  @media screen and (min-width: $bp-min-xxl)
+    padding-block: 3.65rem !important
+    padding-inline: 2.4rem !important
+
+
+.bg-fondo
+  &-1
+    background-image: url("../assets/curso/bg/bg1.png") !important
+    min-height: 625px
+
+  &-2
+    background-image: url("../assets/curso/bg/bg2.png") !important
+    background-repeat: no-repeat
+    background-position: left 90px
+    @media screen and (max-width: $bp-max-md)
+      background-position: left 60px
+
+  &-3
+    background-image: url("../assets/curso/bg/bg3.svg") !important
+
+  &-4
+    background-image: url("../assets/curso/bg/bg4.png") !important
+
+
+
+
+// Custom List Styles
+.custom-list
+  list-style-type: none
+  padding-left: 0
+  
+  li
+    position: relative
+    padding-left: 1.4rem
+    
+    &::before
+      content: url('../assets/curso/bullets/icon1.svg')
+      position: absolute
+      left: 0
+      top: 2%
+      width: 13px
+      height: 13px
+
+// Title Styles
+.titulo-tres
+  position: relative
+  background: $color-acento-contenido
+  border-radius: 8px
+  display: inline-block
+  padding: 0.5rem 1.4rem 0.5rem 68px
+
+  h3, h4
+    margin: 0
+    line-height: 110% !important
+    @media screen and (max-width: $bp-max-sm)
+      font-size: 0.99rem
+
+  &::after
+    content: ''
+    position: absolute
+    bottom: 0
+    left: 0
+    width: 100%
+    height: 52px
+    transform: translateX(12px)
+    background: url('../assets/curso/bullets/icon2.svg') transparent no-repeat bottom left
+
+
+.slyder-a__btn--sigt, .slyder-a__btn--atrs
+  background-color: $color-acento-botones
+  background-image: url(../assets/curso/bullets/arrow-white.svg)
+  color: white
+  opacity: 1
+
+.slyder-a__bullets__item
+  background-color: rgba($color-acento-contenido, 0.35)
+  border-color: rgba($color-acento-contenido, 0.35)
+
+.slyder-a__bullets__item--active
+  background-color: $color-acento-contenido !important
+
+
+// Slider Bullet Responsive Styles
+@media screen and (max-width: $bp-max-sm)
+  .slyder-a__bullets__item
+    margin: 0 3px
+
+// Timeline Styles
+.linea-tiempo-c__header__item__year
+  white-space: nowrap
+  overflow: hidden
+  text-overflow: ellipsis
+  width: 100%
+  @media screen and (max-width: $bp-max-md)
+    max-width: 70%
+
+// Estilos para botones de navegación y control
+.linea-tiempo-c__header__btn,
+.linea-tiempo-c__header__btn--left,
+.linea-tiempo-c__header__btn--right,
+.pasos-b__header__btn--left,
+.pasos-b__header__btn--right
+  background: $color-acento-botones
+  border: 0
+  color: #fff
+
+.tarjeta-avatar
+  padding-top: 35px
+  .tarjeta
+    padding-top: 35px !important
