se ajusta estilos responsive tema 2

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -134,7 +134,7 @@
     background-image: url("../assets/curso/bg/bg6.png") !important
     background-position: center 
     @media screen and (min-width: $bp-min-lg)
-      //height: 760px
+      height: 760px
 
   &-6
     background-image: url("../assets/curso/bg/bg7b.png") !important
